# claude-architect-bootcamp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: checker-builder.md  curriculum-author.md  fixtures-builder.md  reviewer.md  runner-builder.md
.claude/rules/: python.md
bootcamp_cli/: __init__.py  __main__.py  checks.py  commands.py  db.py  doctor.py  judge.py  main.py  mentor.py  modules.py  output.py  rubric.py  state_mgmt.py
curriculum/: manifest.json
curriculum/modules/01-agentic-loop/: lab.md  lesson.md  rubric.md
curriculum/modules/01-agentic-loop/checks/: check_agentic_loop.py  check_agentic_loop_runtime.py  check_agentic_loop_static.py
curriculum/modules/02-multi-agent/: lab.md  lesson.md  rubric.md
curriculum/modules/03-hooks/: lab.md  lesson.md  rubric.md
curriculum/modules/04-claude-code-config/: lab.md  lesson.md  rubric.md
curriculum/modules/05-mcp-server/: lab.md  lesson.md  rubric.md
curriculum/modules/06-cicd/: lab.md  lesson.md  rubric.md
curriculum/modules/07-structured-output/: lab.md  lesson.md  rubric.md
curriculum/modules/08-context-management/: lab.md  lesson.md  rubric.md
curriculum/modules/09-capstone-reliability/: lab.md  lesson.md  rubric.md
docs/: contracts.md
scripts/: validate_references.py
tests/: __init__.py  test_checks_discovery.py  test_checks_execution.py  test_cli.py  test_cli_basic.py  test_gating.py  test_judge.py  test_judge_verdict.py  test_modules.py  test_modules_state.py  test_rubric.py  test_rubric_hints.py  test_workspace.py
(+125 files in other folders)
