[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bootcamp"
version = "0.1.0"
description = "CLI lab-runner for the Claude Architect bootcamp"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bootcamp = "bootcamp_cli.main:app"

[tool.setuptools]
packages = ["bootcamp_cli"]
